test/corpus/gcode_with_comments.txt
=======================
GCode with comments
=======================

; This a whole line blocking comment
G28 ; This a line comment, that shouldn't block the gcode
G28; This a line comment, that shouldn't block the gcode
M862.1 P0.4 ; nozzle diameter check
M862.1 P0.4; nozzle diameter check
; This a whole line blocking comment

G28

---

(source_file
    (comment)
    (command
        (gcode
            (gcode_letter)
            (gcode_number)
        )
    )
    (comment)
    (command
        (gcode
            (gcode_letter)
            (gcode_number)
        )
    )
    (comment)
    (command
        (gcode
            (gcode_letter)
            (gcode_number)
        )
        (arg
            (arg_letter)
            (arg_value
                (number)
            )
        )
    )
    (comment)
    (command
        (gcode
            (gcode_letter)
            (gcode_number)
        )
        (arg
            (arg_letter)
            (arg_value
                (number)
            )
        )
    )
    (comment)
    (comment)
    (command
        (gcode
            (gcode_letter)
            (gcode_number)
        )
    )
)
